# dda-sampling

./: README.md
BART/: Makefile  build_targets.mk  dda_bc.c  dda_getDeltaJ.c  dda_getp.c  dda_getw.c  dda_tools.mk
BART/dda_tools/: dda_utils.c  dda_utils.h  misc_dd.c  misc_dd.h  sample.c  sample.h  sampleHeap.c  sampleHeap.h
cpp/: CMakeLists.txt  Makefile  bcfast.cc  bcfast.cpp  generate  getDeltaJ.cpp  testGenerator.cpp  testHeap.cpp
cpp/bcfast/: CMakeLists.txt  bcfast.cpp
cpp/data/: w.hdr
cpp/dda_utils/: dda_utils.cc  dda_utils.h  sample.h  sampleHeap.cc  sampleHeap.h
cpp/debug/: debug.cc  debug.h
cpp/getDeltaJ/: CMakeLists.txt  getDeltaJ.cpp
cpp/misc/: mdarray.h  misc.cc  misc.hpp  multind.cc
cpp/src/: CMakeLists.txt  config.h  dda_utils.cpp  dda_utils.h  debug.cpp  debug.h  mdarray.h  misc.cpp  misc.h  misc.hpp  multind.cpp  multind.h  sample.cpp  sample.h  sampleHeap.cpp  sampleHeap.h
cpp/testGenerator/: CMakeLists.txt  testGenerator.cpp
cpp/testHeap/: CMakeLists.txt  Makefile  cmake_install.cmake  testHeap.cpp  testheap
matlab/: setup.m
matlab/dda_utils/: best_candidate.m  buildW.m  getDeltaJ.m  getDeltaJ1.m  get_dd.m  get_l1eigs.m
matlab/demos/approxbc/: main_approx.m  main_approx_plot.m
matlab/demos/caip/: main_caip.m  main_caip_plot.m
matlab/misc_utils/: RelativeError.m  bart_0209.m  checkAdjoint.m  estimate_noise.m  getKernels.m  gfactor.m  gfactor_caip.m  mdcopyblock.m  mdcrop.m  mdfft.m  mdrepmat.m  mdsize.m  mdslice.m  mdsum.m  readMDArray.m  vec.m  writeMDArray.m  zpad.m
matlab/tests/: test_DeltaJ1.m  test_DeltaJ2.m  test_all.m  test_dd.m  test_eigs.m  test_periodic.m  test_w.m  threshTest.m
